// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Input Snapshot added optional style inline prop 1`] = `
<div>
  <style
    jsx={true}
  >
    
              input {
                padding: 10px;
                font-size: 14px;
                border-radius: 4px;
                border-width: 1px;
                border-style: solid;
                background-color: #FFFFFF;
                color: #888888;
                border-color: #888888;
                outline: none;
                width: 100%;
              }
              input:active,
              input:focus {
                outline: none;
              }
              input::placeholder {
                color: #888888;
                font-style: italic;
              }
            
  </style>
  <input
    name="input"
    onChange={[Function]}
    placeholder="Input"
    style={
      Object {
        "lineHeight": 2,
        "marginTop": 30,
      }
    }
    type="text"
    value=""
  />
</div>
`;

exports[`Component Input Snapshot without arguments, take the default values 1`] = `
<div>
  <style
    jsx={true}
  >
    
              input {
                padding: 10px;
                font-size: 14px;
                border-radius: 4px;
                border-width: 1px;
                border-style: solid;
                background-color: #FFFFFF;
                color: #888888;
                border-color: #888888;
                outline: none;
                width: 100%;
              }
              input:active,
              input:focus {
                outline: none;
              }
              input::placeholder {
                color: #888888;
                font-style: italic;
              }
            
  </style>
  <input
    name="input"
    onChange={[Function]}
    placeholder="Input"
    style={Object {}}
    type="text"
    value=""
  />
</div>
`;
